Modificacion de menu y eliminacion de href(facebbock, twitter etc).

--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
         </div> <!-- end home-content -->
 
         <ul class="home-sidelinks">
-            <li><a class="smoothscroll" href="#about">About<span>who we are</span></a></li>
-            <li><a class="smoothscroll" href="#services">Services<span>what we do</span></a></li>
-            <li><a  class="smoothscroll" href="#contact">Contact<span>get in touch</span></a></li>
+            <li><a class="smoothscroll" href="#about">Inicio<span></span></a></li>
+            <li><a class="smoothscroll" href="#services">Ofertas<span></span></a></li>
+            <li><a class="smoothscroll" href="#services">Productos<span></span></a></li>
+            <li><a  class="smoothscroll" href="#contact">Contacto<span></span></a></li>
         </ul> <!-- end home-sidelinks -->
 
-        <ul class="home-social">
+        <!-- <ul class="home-social">
             <li class="home-social-title">Follow Us</li>
             <li><a href="#0">
                 <i class="fab fa-facebook"></i>
@@ -131,10 +132,10 @@
                 <i class="fab fa-linkedin"></i>
                 <span class="home-social-text">LinkedIn</span>
             </a></li>
-        </ul> <!-- end home-social -->
+        </ul>  -->
 
         <a href="#about" class="home-scroll smoothscroll">
-            <span class="home-scroll__text">Scroll Down</span>
+            <span class="home-scroll__text">Desplazarse hacia abajo.!</span>
             <span class="home-scroll__icon"></span>
         </a> <!-- end home-scroll -->
 
