--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
 
             <div class="row home-content__main">
                 <h1>
-                "CIENCIA, ARTE Y TECNOLOGIA <br>
-                PARA TU SONRISA
+                "Bienvenidos a"
                 </h1>
 
                 <p>
@@ -568,15 +567,15 @@
     </section> <!-- end s-works -->
 
 
-    <!-- stats
+    <!-- Lugar para correo y telefono
     ================================================== -->
     <section id="stats" class="s-stats">
 
         <div class="row stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
                 
             <div class="col-block stats__col ">
-                <div class="stats__count">129</div>
-                <h5>Awards Received</h5>
+                <div class="stats__count">123456789</div>
+                <h5>Telefono:</h5>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">1507</div>
@@ -585,93 +584,37 @@
             <div class="col-block stats__col">
                 <div class="stats__count">108</div>
                 <h5>Projects Completed</h5>
-            </div>
+            </div> 
             <div class="col-block stats__col">
-                <div class="stats__count">103</div>
-                <h5>Happy Clients</h5> 
-            </div>
+                <div class="stats__count"></div>
+                <h5>correo_pruebas@kjdskjs.com</h5> 
+            </div>  
 
-        </div> <!-- end stats -->
+        </div> 
 
-    </section> <!-- end s-stats -->
+    </section> 
 
 
     <!-- contact
     ================================================== -->
     <section id="contact" class="s-contact">
-
+        <!-- Lugar para Mapa o direccion -->
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead subhead--light">Contact Us</h3>
-                <h1 class="display-1 display-1--light">Get in touch and let's make something great together. Let's turn your idea on an even greater product.</h1>
-            </div>
-        </div> <!-- end section-header -->
 
-        <div class="row">
 
-            <div class="col-full contact-main" data-aos="fade-up">
-                <p>
-                <a href="mailto:#0" class="contact-email">hello@transcend-studio.com</a>
-                <span class="contact-number">+1 (917) 123 456  /  +1 (917) 333 987</span>
-                </p>
-            </div> <!-- end contact-main -->
-
-        </div> <!-- end row -->
-
-        <div class="row">
-
-            <div class="col-five tab-full contact-secondary" data-aos="fade-up">
-                <h3 class="subhead subhead--light">Where To Find Us</h3>
-
-                <p class="contact-address">
-                    1600 Amphitheatre Parkway<br>
-                    Mountain View, CA<br>
-                    94043 US
-                </p>
-            </div> <!-- end contact-secondary -->
-
-            <div class="col-five tab-full contact-secondary" data-aos="fade-up">
-                <h3 class="subhead subhead--light">Follow Us</h3>
-
-                <ul class="contact-social">
-                    <li>
-                        <a href="#0"><i class="fab fa-facebook"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-instagram"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-behance"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-dribbble"></i></a>
-                    </li>
-                </ul> <!-- end contact-social -->
-
-                <div class="contact-subscribe">
-                    <form id="mc-form" class="group mc-form" novalidate="true">
-                        <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
-                        <input type="submit" name="subscribe" value="Subscribe">
-                        <label for="mc-email" class="subscribe-message"></label>
-                    </form>
-                </div> <!-- end contact-subscribe -->
-            </div> <!-- end contact-secondary -->
-
-        </div> <!-- end row -->
-
-        <div class="row">
-            <div class="col-full cl-copyright">
-                <span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span> 
             </div>
         </div>
 
+        
+
+        <div class="row">
+
+        </div> 
+
+
         <div class="cl-go-top">
-            <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
+            <a class="smoothscroll" title="Volver arriba" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
         </div>
 
     </section> <!-- end s-contact -->
