Diseño de menu lateral.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body id="top">
 
-    <!-- header menu orizontal
+    <!-- header menu horizontal
     ================================================== -->
     <header class="s-header">
 
@@ -58,24 +58,6 @@
                 </ul>
     
                 <p>Perspiciatis hic praesentiu(texto adiccionl) reprehenderit.</p>
-    
-                <!-- <ul class="header-nav__social">
-                    <li>
-                        <a href="#0"><i class="fab fa-facebook"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-instagram"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-behance"></i></a>
-                    </li>
-                    <li>
-                        <a href="#0"><i class="fab fa-dribbble"></i></a>
-                    </li>
-                </ul> -->
 
             </div> <!-- end header-nav__content -->
 
