--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <ul class="header-nav__list">
                     <li class="current"><a class="smoothscroll"  href="#home" title="home">Inicio</a></li>
                     <li><a class="smoothscroll"  href="#about" title="about">Ofertas</a></li>
-                    <li><a class="smoothscroll"  href="#services" title="services">Productos</a></li>
+                    <li><a class="smoothscroll"  href="#works" title="works">Productos</a></li>
                     <li><a class="smoothscroll"  href="#contact" title="contact">Contacto</a></li>
                 </ul>
     
@@ -94,7 +94,7 @@
         <ul class="home-sidelinks">
             <li><a class="smoothscroll" href="#about">Inicio<span></span></a></li>
             <li><a class="smoothscroll" href="#services">Ofertas<span></span></a></li>
-            <li><a class="smoothscroll" href="#services">Productos<span></span></a></li>
+            <li><a class="smoothscroll" href="#works">Productos<span></span></a></li>
             <li><a  class="smoothscroll" href="#contact">Contacto<span></span></a></li>
         </ul> <!-- end home-sidelinks -->
 
