--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Transcend</title>
+    <title>ODONTOLOGIA</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -128,8 +128,8 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Who We Are</h3>
-                <h1 class="display-1">We are a group of design driven individuals passionate about creating beautiful UI designs.</h1>
+                <h3 class="subhead">Ofertas....</h3>
+                <h1 class="display-1">TEXTO PARA LAS OFERTAS....</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -202,8 +202,8 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">What We Do</h3>
-                <h1 class="display-1">We have everything you need to launch and grow a successful digital business.</h1>
+                <h3 class="subhead">vACIO...</h3>
+                <h1 class="display-1">TEXTO VACIO.....</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -305,8 +305,8 @@
                 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Featured Works</h3>
-                <h1 class="display-1">These are some of our recent design projects and we are so excited to show them to you.</h1>
+                <h3 class="subhead">PRODUCTOS.....</h3>
+                <h1 class="display-1">TEXTO PARA LOS PRODUCTOS......</h1>
             </div>
         </div> <!-- end section-header -->
 
