Cambio de imagen de fondo y icono.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo.svg" alt="Homepage">
+                <img src="images/icono_logo.png" alt="Homepage">
             </a>
         </div> <!-- end header-logo -->
 
@@ -72,7 +72,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/daniel.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=top>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/fondo_2.png" data-natural-width=3000 data-natural-height=2000 data-position-y=top>
 
         <div class="shadow-overlay"></div>
 
@@ -80,12 +80,12 @@
 
             <div class="row home-content__main">
                 <h1>
-                "Bienvenidos a"
+                "_______________texto______________"
                 </h1>
 
                 <p>
-                We create stunning digital experiences <br>
-                that will help your business stand out.
+                texto____2 <br>
+                texto________3.
                 </p>
             </div> <!-- end home-content__main -->
 
