--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
                 <h3>Menu</h3>
                 
                 <ul class="header-nav__list">
-                    <li class="current"><a class="smoothscroll"  href="#home" title="home">Inicio</a></li>
-                    <li><a class="smoothscroll"  href="#about" title="about">Ofertas</a></li>
-                    <li><a class="smoothscroll"  href="#works" title="works">Productos</a></li>
-                    <li><a class="smoothscroll"  href="#contact" title="contact">Contacto</a></li>
+                    <li class="current"><a class="smoothscroll"  href="#home" title="home">- Inicio</a></li>
+                    <li><a class="smoothscroll"  href="#about" title="about">- Ofertas</a></li>
+                    <li><a class="smoothscroll"  href="#works" title="works">- Productos</a></li>
+                    <li><a class="smoothscroll"  href="#contact" title="contact">- Contacto</a></li>
                 </ul>
     
-                <p>Perspiciatis hic praesentiu(texto adiccionl) reprehenderit.</p>
+                <p>......</p>
 
-            </div> <!-- end header-nav__content -->
+            </div> 
 
-        </nav> <!-- end header-nav -->
+        </nav> 
 
         <a class="header-menu-toggle" href="#0">
             <span class="header-menu-icon"></span>
@@ -72,7 +72,12 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/fondo_2.png" data-natural-width=3000 data-natural-height=2000 data-position-y=top>
+    <section id="home" class="s-home target-section" 
+                        data-parallax="scroll" 
+                        data-image-src="images/fondo_2.png" 
+                        data-natural-width=3000 
+                        data-natural-height=2000 
+                        data-position-y=top>
 
         <div class="shadow-overlay"></div>
 
@@ -80,7 +85,7 @@
 
             <div class="row home-content__main">
                 <h1>
-                "_______________texto______________"
+                "__texto_"
                 </h1>
 
                 <p>
