Modificacion de color de menu inicial

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li><a class="smoothscroll"  href="#contact" title="contact">- Contacto</a></li>
                 </ul>
     
-                <p>......</p>
+                <p><img src="images//Imagen2.png"></p>
 
             </div> 
 
