Modificacion al apartado de contactos telefono y horarios,

--- a/index.html
+++ b/index.html
@@ -555,25 +555,30 @@
 
     <!-- Lugar para correo y telefono
     ================================================== -->
-    <section id="stats" class="s-stats">
+    <section id="" class="s-stats">
 
-        <div class="row stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
+        <div class="row stats block-1-4 block-m-1-2 block-mob-full" >
                 
             <div class="col-block stats__col ">
-                <div class="stats__count">123456789</div>
-                <h5>Telefono:</h5>
+                <div class="stats__count">
+                    <img src="images/despertador.png">
+                    <br>Horarios:</div>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">1507</div>
-                <h5>Cups of Coffee</h5>
+                <div class="stats__count">Lunes a Vernes</div>
+                <h5>8:00 am</h5>
+                <h5>6:00 pm</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">108</div>
-                <h5>Projects Completed</h5>
+                <div class="stats__count">Sabados</div>
+                <h5>8:00 am </h5>
+                <h5>6:00 pm </h5>
             </div> 
             <div class="col-block stats__col">
-                <div class="stats__count"></div>
-                <h5>correo_pruebas@kjdskjs.com</h5> 
+                <div class="stats__count">
+                    <img src="images/telefono.png">
+                    <br>Telefono:</div>
+                <h5>555-555-5554</h5> 
             </div>  
 
         </div> 
