Iconos en menu horizontal.

--- a/index.html
+++ b/index.html
@@ -51,10 +51,14 @@
                 <h3>Menu</h3>
                 
                 <ul class="header-nav__list">
-                    <li class="current"><a class="smoothscroll"  href="#home" title="home">- Inicio</a></li>
-                    <li><a class="smoothscroll"  href="#about" title="about">- Ofertas</a></li>
-                    <li><a class="smoothscroll"  href="#works" title="works">- Productos</a></li>
-                    <li><a class="smoothscroll"  href="#contact" title="contact">- Contacto</a></li>
+                    <li class="current"><a class="smoothscroll"  href="#home" title="home">
+                        <img src="images/Home.png">  Inicio</a></li>
+                    <li><a class="smoothscroll"  href="#about" title="about">
+                        <img src="images/promociones.png"> Ofertas</a></li>
+                    <li><a class="smoothscroll"  href="#works" title="works">
+                        <img src="images/productos.png">Productos</a></li>
+                    <li><a class="smoothscroll"  href="#contact" title="contact">
+                        <img src="images/mundo.png">  Contacto</a></li>
                 </ul>
     
                 <p><img src="images//Imagen2.png"></p>
@@ -565,7 +569,7 @@
                     <br>Horarios:</div>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">Lunes a Vernes</div>
+                <div class="stats__count">Lunes a Viernes</div>
                 <h5>8:00 am</h5>
                 <h5>6:00 pm</h5>
             </div>
