imagen de inicio icono.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/icono_logo.png" alt="Homepage">
+                <img src="images/logodiente1.png" alt="Homepage">
             </a>
         </div> <!-- end header-logo -->
 
@@ -89,12 +89,12 @@
 
             <div class="row home-content__main">
                 <h1>
-                "__texto_"
+                "Bienvenido"
                 </h1>
 
                 <p>
-                texto____2 <br>
-                texto________3.
+                .. <br>
+                ..
                 </p>
             </div> <!-- end home-content__main -->
 
