Insercion de mapa.

--- a/index.html
+++ b/index.html
@@ -594,24 +594,16 @@
     ================================================== -->
     <section id="contact" class="s-contact">
         <!-- Lugar para Mapa o direccion -->
-        <div class="row section-header" data-aos="fade-up">
-            <div class="col-full">
-
-
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1889.7910851255276!2d-97.65768419203417!3d18.682736637705375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9dfebf5696e40e71!2sCoppel+Canada+1047+Juarez!5e0!3m2!1ses-419!2smx!4v1547369370296" 
+                width=100% 
+                height="140%" 
+                frameborder="0" 
+                style="border:0" 
+                allowfullscreen>
+            </iframe> 
+            <div class="cl-go-top">
+                    <a class="smoothscroll" title="Volver arriba" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
             </div>
-        </div>
-
-        
-
-        <div class="row">
-
-        </div> 
-
-
-        <div class="cl-go-top">
-            <a class="smoothscroll" title="Volver arriba" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
-        </div>
-
     </section> <!-- end s-contact -->
 
 
@@ -652,7 +644,7 @@
 
         </div>
 
-    </div> <!-- end photoSwipe background -->
+    </div> end photoSwipe background
 
 
     <!-- preloader
