Modificacion de texto en la secion de productos.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>ODONTOLOGIA</title>
+    <title>Datti Dental</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -93,8 +93,8 @@
                 </h1>
 
                 <p>
-                .. <br>
-                ..
+                    Datti Dental Proveedores <br>
+                    ________________________
                 </p>
             </div> <!-- end home-content__main -->
 
@@ -314,8 +314,9 @@
                 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">PRODUCTOS.....</h3>
-                <h1 class="display-1">TEXTO PARA LOS PRODUCTOS......</h1>
+                <h2 class="subhead">PRODUCTOS.</h2>
+                <h1 class="display-1">Datti Depósoti Dental
+                    ofrece una amplia gama de productos para odontologos y técnicos dentales.</h1>
             </div>
         </div> <!-- end section-header -->
 
