Apartado de marcas terminado.

--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h2 class="subhead">PRODUCTOS.</h2>
-                <h1 class="display-1">Datti Depósoti Dental
+                <h2 class="subhead">PRODUCTOS</h2>
+                <h1 class="display-1">Datti Depósito Dental
                     ofrece una amplia gama de productos para odontologos y técnicos dentales.</h1>
             </div>
         </div> <!-- end section-header -->
@@ -508,10 +508,10 @@
         </div> <!-- end masonry-wrap -->
 
         <div class="testimonials-wrap" data-aos="fade-up">
-
+                <!-- lista de las marcas -->
             <div class="row">
                 <div class="col-full testimonials-header">
-                    <h2 class="h1">What Clients Are Saying.</h2>
+                    <h2 class="h1">CONOCE NUESTRAS MARCAS</h2>
                 </div>
             </div>
 
@@ -520,42 +520,66 @@
                 <div class="col-full testimonials__slider">
 
                     <div class="testimonials__slide">
-                        <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-                        <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
-                        Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
+                        <img src="images/Marcas/Imagen1.png" alt="Author image" class="">
+                        <p>....</p>
                         <div class="testimonials__author">
-                            Tim Cook
-                            <span>CEO, Apple</span>
+                            <!-- Tim Cook -->
+                            <span>texto</span>
                         </div>
-                    </div> <!-- end testimonials__slide -->
+                    </div> 
 
                     <div class="testimonials__slide">
-                        <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
-                        <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                        Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
+                        <img src="images/Marcas/Imagen2.png" alt="Author image" class="">
+                        <p>....</p>
                         <div class="testimonials__author">
-                            Sundar Pichai
-                            <span>CEO, Google</span>
+                            <!-- Sundar Pichai -->
+                            <span>texto</span>
                         </div>
-                    </div> <!-- end testimonials__slide -->
+                    </div> 
 
                     <div class="testimonials__slide">
-                        <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
-                        <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.  
-                        Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.</p>
+                        <img src="images/Marcas/Imagen3.png" alt="Author image" class="">
+                        <p>.....</p>
                         <div class="testimonials__author">
-                            Satya Nadella
-                            <span>CEO, Microsoft</span>
+                            <!-- Satya Nadella -->
+                            <span>texto</span>
                         </div>
-                    </div> <!-- end testimonials__slide -->
+                    </div> 
+
+                    <div class="testimonials__slide">
+                        <img src="images/Marcas/Imagen4.png" alt="Author image" class="">
+                        <p>....</p>
+                        <div class="testimonials__author">
+                            <!-- Satya Nadella -->
+                            <span>texto</span>
+                        </div>
+                    </div>
+
+                    <div class="testimonials__slide">
+                        <img src="images/Marcas/Imagen5.png" alt="Author image" class="">
+                        <p>....</p>
+                        <div class="testimonials__author">
+                            <!-- Satya Nadella -->
+                            <span>texto</span>
+                        </div>
+                    </div>
+
+                    <div class="testimonials__slide">
+                        <img src="images/Marcas/Imagen6.png" alt="Author image" class="">
+                        <p>....</p>
+                        <div class="testimonials__author">
+                            <!-- Satya Nadella -->
+                            <span>texto</span>
+                        </div>
+                    </div>
                     
-                </div> <!-- end testimonials__slider -->
+                </div>
 
-            </div> <!-- end testimonials -->
+            </div> 
 
-        </div> <!-- end testimonials-wrap -->
+        </div> 
 
-    </section> <!-- end s-works -->
+    </section>
 
 
     <!-- Lugar para correo y telefono
@@ -575,7 +599,7 @@
                 <h5>6:00 pm</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">Sabados</div>
+                <div class="stats__count">Sábado</div>
                 <h5>8:00 am </h5>
                 <h5>6:00 pm </h5>
             </div> 
