imagenes de productos.

--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-lamp.jpg" class="thumb-link" title="Lamp" data-size="1050x700">
-                                <img src="images/portfolio/lamp.jpg" 
-                                     srcset="images/portfolio/lamp.jpg 1x, images/portfolio/lamp@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-Imagen1.png" class="thumb-link" title="Lamp" data-size="1050x700">
+                                <img src="images/portfolio/Imagen1.png" 
+                                     srcset="images/portfolio/Imagen1.png 1x, images/portfolio/Imagen1@2x.png 2x" alt="">
                             </a>
                         </div>
 
@@ -521,56 +521,56 @@
 
                     <div class="testimonials__slide">
                         <img src="images/Marcas/Imagen1.png" alt="Author image" class="">
-                        <p>....</p>
+                        <!-- <p>....</p>
                         <div class="testimonials__author">
-                            <!-- Tim Cook -->
+                             Tim Cook
                             <span>texto</span>
-                        </div>
+                        </div> -->
                     </div> 
 
                     <div class="testimonials__slide">
                         <img src="images/Marcas/Imagen2.png" alt="Author image" class="">
-                        <p>....</p>
+                        <!-- <p>....</p>
                         <div class="testimonials__author">
-                            <!-- Sundar Pichai -->
+                              Sundar Pichai
                             <span>texto</span>
-                        </div>
+                        </div> -->
                     </div> 
 
                     <div class="testimonials__slide">
                         <img src="images/Marcas/Imagen3.png" alt="Author image" class="">
-                        <p>.....</p>
+                        <!-- <p>.....</p>
                         <div class="testimonials__author">
-                            <!-- Satya Nadella -->
+                             Satya Nadella 
                             <span>texto</span>
-                        </div>
+                        </div> -->
                     </div> 
 
                     <div class="testimonials__slide">
                         <img src="images/Marcas/Imagen4.png" alt="Author image" class="">
-                        <p>....</p>
+                        <!-- <p>....</p>
                         <div class="testimonials__author">
-                            <!-- Satya Nadella -->
+                             Satya Nadella
                             <span>texto</span>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="testimonials__slide">
                         <img src="images/Marcas/Imagen5.png" alt="Author image" class="">
-                        <p>....</p>
+                        <!-- <p>....</p>
                         <div class="testimonials__author">
-                            <!-- Satya Nadella -->
+                             Satya Nadella 
                             <span>texto</span>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="testimonials__slide">
                         <img src="images/Marcas/Imagen6.png" alt="Author image" class="">
-                        <p>....</p>
+                        <!-- <p>....</p>
                         <div class="testimonials__author">
-                            <!-- Satya Nadella -->
+                             Satya Nadella 
                             <span>texto</span>
-                        </div>
+                        </div> -->
                     </div>
                     
                 </div>
