Apartado de productos terminado.

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Lamp
+                                texto
                             </h3>
                             <p class="item-folio__cat">
                                 Web Design
@@ -343,11 +343,11 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Project Link
+                            Clic para ver detalles.
                         </a>
 
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>......</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -357,15 +357,15 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" title="Salad" data-size="1050x700">
-                                <img src="images/portfolio/salad.jpg" 
-                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-Imagen2.png" class="thumb-link" title="Salad" data-size="1050x700">
+                                <img src="images/portfolio/Imagen2ch.png" 
+                                     srcset="images/portfolio/Imagen2ch.png 1x, images/portfolio/Imagen2gra.png 2x" alt="">
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Salad
+                                texto
                             </h3>
                             <p class="item-folio__cat">
                                 Branding
@@ -373,11 +373,11 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Project Link
+                            Clic para ver detalles.
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>.....</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -387,15 +387,15 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" title="Woodcraft" data-size="1050x700">
-                                <img src="images/portfolio/woodcraft.jpg"
-                                     srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-Imagen3.png" class="thumb-link" title="Woodcraft" data-size="1050x700">
+                                <img src="images/portfolio/Imagen3ch.png"
+                                     srcset="images/portfolio/Imagen3ch.png 1x, images/portfolio/Imagen3gr.png 2x" alt="">
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Woodcraft
+                                texto
                             </h3>
                             <p class="item-folio__cat">
                                 Branding
@@ -403,11 +403,11 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Project Link
+                            Clic para ver detalles.
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>.........</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -417,15 +417,15 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" title="Liberty" data-size="1050x700">
-                                <img src="images/portfolio/liberty.jpg"
-                                     srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-Imagen5.png" class="thumb-link" title="Liberty" data-size="1050x700">
+                                <img src="images/portfolio/Imagen5ch.png"
+                                     srcset="images/portfolio/Imagen5ch.png 1x, images/portfolio/Imagen5gra.png 2x" alt="">
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Liberty
+                                texto
                             </h3>
                             <p class="item-folio__cat">
                                 Web Development
@@ -433,11 +433,11 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Project Link
+                            Clic para ver detalles.
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>........</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -448,15 +448,15 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-fuji.jpg" class="thumb-link" title="Fuji" data-size="1050x700">
-                                <img src="images/portfolio/fuji.jpg"
-                                     srcset="images/portfolio/fuji.jpg 1x, images/portfolio/fuji@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-Imagen6.png" class="thumb-link" title="Fuji" data-size="1050x700">
+                                <img src="images/portfolio/Imagen6ch.png"
+                                     srcset="images/portfolio/Imagen6ch.png 1x, images/portfolio/Imagen6gra.png 2x" alt="">
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Fuji
+                                texto
                             </h3>
                             <p class="item-folio__cat">
                                 Web Design
@@ -464,11 +464,11 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Project Link
+                            Clic para ver detalles.
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>........</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -478,15 +478,15 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                <img src="images/portfolio/shutterbug.jpg"
-                                     srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-Imagen7.png" class="thumb-link" title="Shutterbug" data-size="1050x700">
+                                <img src="images/portfolio/Imagen7ch.png"
+                                     srcset="images/portfolio/Imagen7ch.png 1x, images/portfolio/Imagen7gra.png 2x" alt="">
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Lady Shutterbug
+                                texto
                             </h3>
                             <p class="item-folio__cat">
                                 Branding
@@ -494,11 +494,11 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Project Link
+                            Clic para ver detalles.
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>.......</p>
                         </span>
 
                     </div> <!-- end item-folio -->
